fix: header overflow hidden

--- a/styles/stylesHeader.css
+++ b/styles/stylesHeader.css
@@ -31,6 +31,7 @@ header{
 	left:50%;
 	translate:-50% 0;
 	z-index:10;
+	overflow: hidden;
 }
 
 .header-hamburgerIcon{
